Fixes text align.

--- a/src/sass/_holder.scss
+++ b/src/sass/_holder.scss
@@ -180,6 +180,7 @@
 			background: rgba($color: white, $alpha: 0.2);
 			padding: 2rem 5rem;
 			position: relative;
+			text-align: left;
 
 			@include mq(768px) {
 				padding: 2rem;
